--- a/apa6/cmb.bib
+++ b/apa6/cmb.bib
@@ -133,6 +133,13 @@ Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
  howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}},
  year = {2012},
 }
+@article{Guerraoui2016,
+  title={Trade-offs in Replicated Systems},
+  author={Guerraoui, Rachid and Pavlovic, Matej and Seredinschi, Dragos-Adrian},
+  journal={Data Engineering},
+  pages={14},
+  year={2016}
+}
 @article{Gilbert2002,
 author = {Gilbert, Seth and Lynch, Nancy},
 doi = {10.1145/564585.564601},
@@ -161,6 +168,23 @@ and Anderson, Thomas},
  keywords = {Paxos, consistency, distributed systems, distributed transactions,
 fault tolerance, scalability, storage},
 } 
+@article{Herlihy1990,
+ author = {Herlihy, Maurice P. and Wing, Jeannette M.},
+ title = {Linearizability: A Correctness Condition for Concurrent Objects},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {July 1990},
+ volume = {12},
+ number = {3},
+ month = jul,
+ year = {1990},
+ issn = {0164-0925},
+ pages = {463--492},
+ numpages = {30},
+ doi = {10.1145/78969.78972},
+ acmid = {78972},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
 @book{Jain1991,
  title={The Art Of Computer Systems Performance Analysis},
  author={Jain, Raj},
@@ -186,6 +210,37 @@ fault tolerance, scalability, storage},
  ee        = {http://www.vldb.org/pvldb/vol4/p1040-kadambi.pdf},
  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+@article{Lakshman2010,
+ author = {Lakshman, Avinash and Malik, Prashant},
+ title = {Cassandra: A Decentralized Structured Storage System},
+ journal = {{SIGOPS Oper. Syst. Rev.}},
+ issue_date = {April 2010},
+ volume = {44},
+ number = {2},
+ month = apr,
+ year = {2010},
+ issn = {0163-5980},
+ pages = {35--40},
+ numpages = {6},
+ doi = {10.1145/1773912.1773922},
+ acmid = {1773922},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+@inproceedings{Li2012,
+ author = {Li, Cheng and Porto, Daniel and Clement, Allen and Gehrke, Johannes and Pregui\c{c}a, Nuno and Rodrigues, Rodrigo},
+ title = {Making Geo-replicated Systems Fast As Possible, Consistent when Necessary},
+ booktitle = {{Proceedings of the 10th USENIX Conference on Operating Systems Design and Implementation}},
+ series = {OSDI'12},
+ year = {2012},
+ isbn = {978-1-931971-96-6},
+ location = {Hollywood, CA, USA},
+ pages = {265--278},
+ numpages = {14},
+ acmid = {2387906},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
 @inproceedings{Lloyd2011,
  author = {Lloyd, Wyatt and Freedman, Michael J. and Kaminsky, Michael and
 Andersen, David G.},
@@ -222,6 +277,12 @@ year = {1993}
  note = "[Retrieved February 01, 2013.]",
  year = {2013}
 } 
+@misc{Riak2013,
+ author = {Riak},
+ title = {{Riak}},
+ howpublished = {\url{http://docs.basho.com/riak/}},
+ year = {2013}
+} 
 @inproceedings{Sovran2011,
  author = {Sovran, Yair and Power, Russell and Aguilera, Marcos K. and Li,
 Jinyang},
@@ -238,6 +299,19 @@ Jinyang},
  keywords = {asynchronous replication, distributed storage, geo-distributed
 systems, key-value store, parallel snapshot isolation, transactions},
 } 
+@inproceedings{Sumbaly2012,
+ author = {Sumbaly, Roshan and Kreps, Jay and Gao, Lei and Feinberg, Alex and Soman, Chinmay and Shah, Sam},
+ title = {Serving Large-scale Batch Computed Data with Project Voldemort},
+ booktitle = {Proceedings of the 10th USENIX Conference on File and Storage Technologies},
+ series = {FAST'12},
+ year = {2012},
+ location = {San Jose, CA},
+ pages = {18--18},
+ numpages = {1},
+ acmid = {2208479},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}  
 @misc{Topchiy2013,
  author = {Topchiy, Serhiy},
  title = {{Testing Amazon EC2 network speed}},
@@ -271,21 +345,4 @@ systems, key-value store, parallel snapshot isolation, transactions},
  doi = {10.1145/1435417.1435432},
  acmid = {1435432},
  publisher = {ACM},
-} 
-@article{Herlihy1990,
- author = {Herlihy, Maurice P. and Wing, Jeannette M.},
- title = {Linearizability: A Correctness Condition for Concurrent Objects},
- journal = {ACM Trans. Program. Lang. Syst.},
- issue_date = {July 1990},
- volume = {12},
- number = {3},
- month = jul,
- year = {1990},
- issn = {0164-0925},
- pages = {463--492},
- numpages = {30},
- doi = {10.1145/78969.78972},
- acmid = {78972},
- publisher = {ACM},
- address = {New York, NY, USA},
 } 
