Minor improvements after revision

--- a/apa6/cmb.bib
+++ b/apa6/cmb.bib
@@ -76,6 +76,16 @@ Principles}},
  acmid = {2043571},
  keywords = {Windows Azure, cloud storage, distributed storage systems},
 } 
+@article{Chang2008,
+ title={Bigtable: A distributed storage system for structured data},
+ author={Chang, Fay and Dean, Jeffrey and Ghemawat, Sanjay and Hsieh, Wilson C and Wallach, Deborah A and Burrows, Mike and Chandra, Tushar and Fikes, Andrew and Gruber, Robert E},
+ journal={ACM Transactions on Computer Systems (TOCS)},
+ volume={26},
+ number={2},
+ pages={4},
+ year={2008},
+ publisher={ACM}
+}
 @article{Cooper2008,
  author = {Cooper, Brian F. and Ramakrishnan, Raghu and Srivastava, Utkarsh and
 Silberstein, Adam and Bohannon, Philip and Jacobsen, Hans-Arno and Puz, Nick and
@@ -277,12 +287,32 @@ year = {1993}
  note = "[Retrieved February 01, 2013.]",
  year = {2013}
 } 
+@article{Ramakrishnan2012,
+ title={Cap and cloud data management},
+ author={Ramakrishnan, Raghu},
+ journal={Computer},
+ volume={45},
+ number={2},
+ pages={43--49},
+ year={2012},
+ publisher={Citeseer}
+}
 @misc{Riak2013,
  author = {Riak},
  title = {{Riak}},
  howpublished = {\url{http://docs.basho.com/riak/}},
  year = {2013}
 } 
+@article{Silberstein2012,
+ title={Pnuts in flight: Web-scale data serving at yahoo},
+ author={Silberstein, Adam and Chen, Jianjun and Lomax, David and McMillan, Brad and Mortazavi, Masood and Narayan, PPS and Ramakrishnan, Raghu and Sears, Rusty},
+ journal={IEEE Internet Computing},
+ volume={16},
+ number={1},
+ pages={13--23},
+ year={2012},
+ publisher={IEEE}
+}
 @inproceedings{Sovran2011,
  author = {Sovran, Yair and Power, Russell and Aguilera, Marcos K. and Li,
 Jinyang},
