--- a/apa6/cmb.tex
+++ b/apa6/cmb.tex
@@ -574,17 +574,24 @@ The number of nodes and benchmark instances not only influenced the
 responses, but also influenced operational issues related to node reservation --
 by Grid'5000 rules, the greater the number of reserved nodes, the smaller the
 reservation time. Therefore, a study was done to determine the influence of
-these factors. We used the following levels:
+these factors, Table~\ref{tab:system_size_and_benchmark_size_factors} shows
+their levels.
 
-\begin{itemize}
+\begin{table}[h!]
+\caption{System size and benchmark size factors and levels.}
+\label{tab:system_size_and_benchmark_size_factors}
+\begin{tabular}{lcc} \toprule
 
-\item Number of system nodes (N): 8 and 16
+Factor & Levels \\ \midrule
 
-\item Number of benchmark instances (B): 2 and 4
+Number of system nodes (N) & 8 and 16\\
 
-\item Number of threads in each benchmark instance (T): 32 and 64
+Number of benchmark instances (B) & 2 and 4\\
 
-\end{itemize}
+Number of threads in each benchmark instance (T) & 32 and 64 \\ \bottomrule
+
+\end{tabular}
+\end{table}
 
 \begin{table}[h!]
   \caption{Study for system size factors. N -- number of system nodes, B --
@@ -632,15 +639,21 @@ and operational difficulties due to the Grid'5000 rules.
 \subsection{Database factors}
 
 The database size affects memory usage and bandwidth consumption in the nodes.
-The levels used in the study were:
+Table~\ref{tab:database_factors_and_levels} shows the factors and their levels.
 
-\begin{itemize}
+\begin{table}[h!]
+\caption{Database factors and levels.}
+\label{tab:database_factors_and_levels}
+\begin{tabular}{lcc} \toprule
 
-\item Number of stored objects (O): 64,000 and 256,000
+Factor & Levels \\ \midrule
 
-\item Object sizes (S): 100 and 10,000 bytes
+Number of stored objects (O) & 64,000 and 256,000\\
 
-\end{itemize}
+Object sizes (S) & 100 and 10,000 bytes \\ \bottomrule
+
+\end{tabular}  
+\end{table}
 
 These levels result in low memory pressure on each node. The object size levels
 are based on a Facebook study on its caching systems \parencite{Atikoglu2012}.
@@ -691,23 +704,30 @@ than 500 bytes \parencite{Atikoglu2012}.
 \subsection{Network factors}
 
 Given the purpose of this work, the study for network factors was one of the
-most important for the factor selection. The levels were as follows:
+most important for factor selection. Table~\ref{tab:network_factors_and_levels}
+shows the factors and their levels.
 
-\begin{itemize}
+\begin{table}[h!]
+\caption{Network factors and levels.}
+\label{tab:network_factors_and_levels}
+\begin{tabular}{lcc} \toprule
 
-\item WAN latency (L): 100 and 300 ms
+Factor & Levels \\ \midrule
 
-\item WAN jitter (J): 1 and 60\%
+WAN latency (L) & 100 and 300 ms \\
 
-\item WAN packet loss rate (P): 0.01 and 0.3\%
+WAN jitter (J) & 1 and 60\% \\
 
-\item WAN packet duplication rate (D): 0.05 and 5\%
+WAN packet loss rate (P) & 0.01 and 0.3\% \\
 
-\item WAN packet reordering rate (R): 0.05 and 5\%
+WAN packet duplication rate (D) & 0.05 and 5\% \\
 
-\item TCP variant (V): CUBIC and H-TCP
+WAN packet reordering rate (R) & 0.05 and 5\% \\
 
-\end{itemize}
+TCP variant (V) & CUBIC and H-TCP\\ \bottomrule
+
+\end{tabular}  
+\end{table}
 
 Latency levels were based on a study reporting latencies between regions of the
 Amazon Web Services \parencite{Sovran2011}, in which the lowest latency between data
@@ -789,27 +809,37 @@ The fixed values of the disregarded factors were:
 %% ------------------------------------------------------------------------- %%
 \subsection{Workload factors}
 
-Along with network factors, this was one of the most important studies. The
-levels were as follows:
+Along with network factors, this was one of the most important studies. Table~\ref{tab:workload_factors_and_levels} shows the factors and levels.
 
-\begin{itemize}
+\begin{table}[h!]
+\caption{Workload factors and levels.}
+\label{tab:workload_factors_and_levels}
+\begin{tabular}{lcc} \toprule
 
-\item Read / write ratio (R): 2:1 and 10:1
+Factor & Levels \\ \midrule
 
-\item Object popularity (P): uniform (the average of the request arrival rate
-for each object is the same) and skewed (the arrival rate follows a Pareto
-distribution)
+Read / write ratio (R) & 2:1 and 10:1 \\
 
-\item Locality (X): 50\% (no locality) and 90\% (90\% of accesses to a given
-object coming from one data center and 10\% from the other)
+Object popularity (P) & uniform and skewed \\
 
-\end{itemize}
+Locality (X) & 50\% and 90\% \\ \bottomrule
+
+\end{tabular}
+\end{table}
+
+The uniform level of object popularity means that the average of the request
+arrival rate for each object is the same, while the skewed level means that the
+arrival rate follows a Pareto distribution. Considering the study used two data
+centers, a 50\% locality means that a request for a given object has the same
+probability of coming from any of the two data centers (which effectively means
+there is no locality of acces), while 90\% means that 90\% of accesses to a
+given object come from one data center and 10\% from the other.
 
 As the modes behave differently depending on locality, we performed one set of
 experiments for each mode.
 
 \begin{table}[h!]
-\caption{Study for workload factors, L is latency. R -- read / write ratio, P
+\caption{Study for workload factors, L -- latency, R -- read / write ratio, P
 -- object popularity, X -- locality}
 \begin{tabular}{cccccccccc} \toprule
 
@@ -876,7 +906,7 @@ The fixed values of the disregarded factors were:
 
 Factor & Levels & Number of levels\\ \midrule
 
-Mode & \textit{ev1}, \textit{ev2}, \textit{any} e \textit{lat} & 4\\
+Mode & \textit{ev1}, \textit{ev2}, \textit{any} and \textit{lat} & 4\\
 
 WAN latency (ms) & 0, 100, 200 and 300 & 4\\
 
