Confidence level and accuracy

--- a/apa6/cmb.tex
+++ b/apa6/cmb.tex
@@ -889,6 +889,11 @@ The fixed values of the disregarded factors were:
 %% ------------------------------------------------------------------------- %%
 \section{Final Study and Results}
 
+The final study consisted of a total of 64 experiments with the factors
+selected by the 2\textsuperscript{k} studies.
+Table~\ref{tab:fatores_e_niveis_do_estudo_final} shows the final factors and
+their respective levels.
+
 \begin{table}[h!]
 \caption{Factors and levels in the final study.}
 \begin{tabular}{lcc} \toprule
@@ -909,11 +914,14 @@ Locality & 50\% and 90\% & 2\\ \bottomrule
 
 \end{table}
 
-The final study consisted of a total of 64 experiments with the factors
-selected by the 2\textsuperscript{k} studies.
-Table~\ref{tab:fatores_e_niveis_do_estudo_final} shows the final factors and
-their respective levels. Two replications of the study were used to estimate
-the variability of the experiments, the measured average CVs were 1\% for reads
+The confidence level of the study is 99\% with accuracy of 2\%. These values
+are based on exploratory experiments to define the required sample size for the
+final study, where we needed to balance the significance of the results with
+the available resources. The higher the confidence level and accuracy, the
+larger the sample sizes needed to be \parencite{Jain1991}, consequently, the
+greater the period of time we needed to have nodes reserved in the cluster. Two
+replications of the study were used to estimate the variability of the
+experiments, the measured average coefficients of variation were 1\% for reads
 and 0.8\% for writes.
 
 \begin{figure}[h!]
