Improve threats to validity

--- a/apa6/cmb.tex
+++ b/apa6/cmb.tex
@@ -1075,9 +1075,10 @@ system operating in failure modes (from the failure of a single node to a
 whole data center) will likely yield to different results. Such situations were
 not part of the experiments due to resource limitations.
 
-Even though not all possible configurations, conditions and situations have
-been addressed in this study, the results are generalizable for large-scale
-systems operating under normal conditions.
+Even though we were limited in the number of configurations, conditions and
+situations we were able to address in this study due to resource constraints,
+the study represents a considerable portion of real world deployments -- tens
+of system nodes operating most of the time under normal conditions.
 
 %% ------------------------------------------------------------------------- %%
 \section{Conclusions}
