Add LinkedIn papers

--- a/apa6/cmb.bib
+++ b/apa6/cmb.bib
@@ -280,6 +280,14 @@ title = {{Memory consistency models}},
 volume = {27},
 year = {1993}
 }
+@inproceedings{Qiao2013,
+ title={On brewing fresh espresso: LinkedIn's distributed data serving platform},
+ author={Qiao, Lin and Surlaker, Kapil and Das, Shirshanka and Quiggle, Tom and Schulman, Bob and Ghosh, Bhaskar and Curtis, Antony and Seeliger, Oliver and Zhang, Zhen and Auradar, Aditya and others},
+ booktitle={Proceedings of the 2013 ACM SIGMOD International Conference on Management of Data},
+ pages={1135--1146},
+ year={2013},
+ organization={ACM}
+}
 @misc{PingER2013,
  author = {PingER},
  title = {{Ping End-to-end Reporting}},
@@ -296,6 +304,16 @@ year = {1993}
  pages={43--49},
  year={2012},
  publisher={Citeseer}
+}
+@article{Rao2011,
+ title={Using paxos to build a scalable, consistent, and highly available datastore},
+ author={Rao, Jun and Shekita, Eugene J and Tata, Sandeep},
+ journal={Proceedings of the VLDB Endowment},
+ volume={4},
+ number={4},
+ pages={243--254},
+ year={2011},
+ publisher={VLDB Endowment}
 }
 @misc{Riak2013,
  author = {Riak},
